Pages HTML mises à jour

--- a/SopraCov/web/errodate.html
+++ b/SopraCov/web/errodate.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Erreur de saisie de Date</title>
+<title>SopraCov</title>
 <body style="background-image:url(./images/1.png)">
 	<!---------- CSS ------------>
 	<link rel="stylesheet" type="text/css" href="./css2/style2.css">
