--- a/SopraCov/web/index.html
+++ b/SopraCov/web/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-  <title>Login</title>
+  <title>SopraCov</title>
 
     <link rel="stylesheet" href="css/style.css" media="screen" type="text/css" />
 
