Voilà!! Laureine tu dois repreciser la suppression de compte

--- a/SopraCov/web/index.html
+++ b/SopraCov/web/index.html
@@ -2,11 +2,9 @@
 <html lang="en-US">
 
 <head>
-
   <title>SopraCov</title>
-
+    <meta property="og:image" itemprop="image primaryImageOfPage" content="/images/Sopragroup.png" />
     <link rel="stylesheet" href="css/style.css" media="screen" type="text/css" />
-
     <meta charset="utf-8">
 
     <title>Bienvenue dans SopraCov</title>
