--- a/trunk/SopraCov/web/avance.html
+++ b/trunk/SopraCov/web/avance.html
@@ -35,7 +35,7 @@
                 </div>
                 <div class="register span6">                
                 <form method="POST" action="AvanceServlet">
-            <label><h4>Nom Conducteur</h4> </label>
+                    <label><h4>Nom Conducteur      &nbsp;&nbsp;(ex: Nom Prenom)</h4> </label>
             <input type="text" name="Nom"><br/>            
             <label><h4>Commune </h4></label>
             <input type="text" name="Commune"><br/>
