Modification de la page result.html en result.jsp. Recherche avancée Ok lorsque les trajets existent dans la base de données. Par contre lorsque les trajets n'existent pas le message de la page noresult.html ne s'affiche pas très bien "Désolé. Aucun trajet n'a été trouvé."

--- a/SopraCov/web/avance.html
+++ b/SopraCov/web/avance.html
@@ -35,7 +35,7 @@
                 </div>
                 <div class="register span6">                
                 <form method="POST" action="AvanceServlet">
-            <label><h4>Nom Conducteur</h4> </label>
+                    <label><h4>Nom Conducteur      &nbsp;&nbsp;(ex: Nom Prenom)</h4> </label>
             <input type="text" name="Nom"><br/>            
             <label><h4>Commune </h4></label>
             <input type="text" name="Commune"><br/>
