--- a/SopraCov/web/noresult.html
+++ b/SopraCov/web/noresult.html
@@ -4,7 +4,7 @@
 
     <head>
 
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
         <title>SopraCov</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="">
@@ -38,18 +38,8 @@
                     <form method="POST" action="ProfileServlet">
             
                        <div>
-							<table id='results'>
-								<thead>
-									<tr id='header_row'>
-										<th>Départ</th><th/><th/></th><th/><th/>
-										<th>Arrivée</th><th/><th/></th><th/><th/>
-										<th>Conducteur</th><th/><th/></th><th/><th/>
-										<th>Numero</th><th/><th/></th><th/><th/>
-										<th>Details</th><th/><th/></th><th/><th/>
-									</tr>
-								</thead>
-								</table>
-						</div>
+		       <label><h4>Désolé Aucun trajet n'a été trouvé.</h4></label>
+		      </div>
 						<p><br/>
 							<a href="client.html">Retour</a><span class="fontawesome-arrow-right"></span>
 						</p>
