--- a/trunk/SopraCov/web/errorSup2.html
+++ b/trunk/SopraCov/web/errorSup2.html
@@ -22,7 +22,7 @@
         		<img id="signup-icon" src="./images/Sopragroup.png" alt="" />
                     
             </div>
-			<p><font color="red">Erreur lors de la suppression de votre compte.</font><br/>
+			<p><font color="red">Votre mot de passe n'est pas valide.</font><br/>
 			<button>
 				<a href="profil.jsp">Reessayez</a>
 			</button>			
