--- a/SopraCov/web/pswderror.html
+++ b/SopraCov/web/pswderror.html
@@ -24,7 +24,7 @@
             </div>
 			<p><font color="red">Mot de passe non valide.<br/>Réessayez en utilisant les bons mots de passe et assurez vous qu'ils soient differents</font><br/>
 			<button>
-			<a href="pswdregister.html">Modifier a nouveau</a><span class="fontawesome-arrow-right"></span>
+			<a href="pswdregister.jsp">Modifier a nouveau</a><span class="fontawesome-arrow-right"></span>
 			</button>
 			</p>
 			         
