--- a/SopraCov/web/admin.html
+++ b/SopraCov/web/admin.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Connexion administrateur...</title>
-<meta http-equiv="refresh" content="1; URL=https://javaee.ypbl.info/">
+<meta http-equiv="refresh" content="1; URL=http://localhost/phpmyadmin/#PMAURL-0:index.php?db=&table=&server=1&target=&token=b09eb1ade21a740e69b73d8bfb7db30a">
 </head>
 
 <body>
